--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,12 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="menu_title_settings">Settings</string>
     <string name="menu_title_players">Players</string>
     <string name="title_matchups">Matchups</string>
     <string name="title_activity_create__user">Create_User</string>
+    <string name="create_new_user_btncreate">Create</string>
+    <string name="create_new_user_btncancel">Cancel</string>
+    <string name="create_new_user_create_user_lbl">Create User</string>
+    <string name="menu_title_picks">Picks</string>
 </resources>
